--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -6,7 +6,7 @@
   "all": "全て",
   "already_in_query": "キューに追加済",
   "already_saved": "保存済み",
-  "android_special_setting": "Android special setting",
+  "android_special_setting": "Android独自の設定",
   "append_to_query": "キューに追加",
   "apply": "適用",
   "attempting_to_log_in": "ログイン中...",
@@ -40,7 +40,7 @@
   "display_mode": "リフレッシュレート",
   "display_mode_message": "リフレッシュレートを選択 (実験的)",
   "display_mode_warning": "高リフレッシュレートに対応していない端末の場合は、変更しないでください",
-  "donate_message": "Xie Xie",
+  "donate_message": "開発者へのサポートに感謝します",
   "donate_title": "コーヒーを奢る",
   "donation": "コーヒーを奢る",
   "dont_have_account": "まだアカウントを持っていませんか？",
@@ -118,7 +118,7 @@
   "popular_desc": "Popular",
   "private": "非公開",
   "public": "公開",
-  "pull_up_to_load_more": "Swipe up to load more",
+  "pull_up_to_load_more": "スワイプでもっと見る",
   "quality_setting": "設定",
   "quick_view": "ブクマ",
   "quietly_follow": "非公開でフォロー",
@@ -127,7 +127,7 @@
   "rate_title": "PixEzを気に入ってくれたら",
   "recommand_tag": "おすすめのタグ",
   "recommend": "おすすめ",
-  "recommend_for_you": "おすすめ",
+  "recommend_for_you": "あなたへのおすすめ",
   "refresh": "更新",
   "reply": "返信",
   "repo_address": "GitHub",
@@ -207,9 +207,9 @@
   "step": "Step",
   "special_shaped_screen": "异形屏",
   "platform_special_setting": "平台特殊设置",
-  "system": "system",
-  "light": "light",
-  "dark": "dark",
+  "system": "システム",
+  "light": "明るい",
+  "dark": "暗い",
   "theme_mode": "theme mode",
   "create_folder": "フォルダ作成",
   "old_way": "Old way",
@@ -243,5 +243,5 @@
   "network_question": "Is your network environment able to access pixiv normally?",
   "media_hint": "Illustrations will be saved to the album",
   "copy": "copy",
-  "view_replies": "View reply"
+  "view_replies": "返信を表示"
 }
